[package]
name = "enigma"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78" }
ring = "0.16.20"
uuid = { version = "1.2.2", features = ["v4"] }
web-sys = { version = "0.3.60", features = ["Window", "console", "Location"] }
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
base64 = "0.13.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = 's'
